[gd_scene load_steps=30 format=3 uid="uid://c762cjbn7lvhc"]

[ext_resource type="Script" path="res://DevMenu/DevMenu.gd" id="1_n8tci"]
[ext_resource type="Theme" uid="uid://camj2h6115iy2" path="res://DevMenu/ui_devmenu_theme.tres" id="2_d2ujk"]
[ext_resource type="Script" path="res://DevMenu/DirScaner.gd" id="2_fl45q"]
[ext_resource type="PackedScene" uid="uid://d3tibanldaq15" path="res://Game/player.tscn" id="3_jxqyn"]
[ext_resource type="PackedScene" uid="uid://l1iatj037t3y" path="res://Game/coin.tscn" id="4_1ushc"]
[ext_resource type="Shortcut" uid="uid://cgcruitxegn2a" path="res://DevMenu/shortcut_open_devtool.tres" id="4_3sunq"]
[ext_resource type="SpriteFrames" uid="uid://dtq7yttb4sh8v" path="res://Sprites/s_player.tres" id="5_1gvc2"]
[ext_resource type="Script" path="res://AssetPack/AnimSprite2DAsset.gd" id="6_fu8am"]
[ext_resource type="SpriteFrames" uid="uid://bajkklc3swfud" path="res://Sprites/s_coin.tres" id="7_jijk1"]
[ext_resource type="SpriteFrames" uid="uid://c2qfrreuusi8w" path="res://Sprites/s_enemy.tres" id="8_1uygw"]
[ext_resource type="SpriteFrames" uid="uid://bvmmy11jhxye5" path="res://Sprites/s_danger.tres" id="9_ej2pt"]
[ext_resource type="SpriteFrames" uid="uid://d0sx1kw0eethl" path="res://Sprites/s_platform_static.tres" id="10_s4gdo"]
[ext_resource type="SpriteFrames" uid="uid://bx4qjh144bdw2" path="res://Sprites/s_platform_move.tres" id="11_mj3n5"]
[ext_resource type="SpriteFrames" uid="uid://b1ieprdw6omlf" path="res://Sprites/s_flag.tres" id="12_663yc"]
[ext_resource type="SpriteFrames" uid="uid://b7on802l8lji3" path="res://Sprites/s_background.tres" id="13_qljbc"]
[ext_resource type="SpriteFrames" uid="uid://4xbo2t8q82td" path="res://Sprites/s_background_parallax.tres" id="14_sas53"]
[ext_resource type="SpriteFrames" uid="uid://c53cp8bomcry4" path="res://Sprites/s_decoration_small.tres" id="15_5elp5"]
[ext_resource type="SpriteFrames" uid="uid://dfkqady4xdfq8" path="res://Sprites/s_decoration_mid.tres" id="16_5voug"]
[ext_resource type="SpriteFrames" uid="uid://csfpgr4mplpyo" path="res://Sprites/s_decoration_big.tres" id="17_yx0yb"]
[ext_resource type="SpriteFrames" uid="uid://tdk7eg7ju4tj" path="res://Sprites/s_ui_live.tres" id="18_542jj"]
[ext_resource type="SpriteFrames" uid="uid://cqdv0ndqlw243" path="res://Sprites/s_ui_coin.tres" id="19_gv5uv"]
[ext_resource type="Script" path="res://DevMenu/SettingsPanel.gd" id="20_bkcxn"]
[ext_resource type="TileSet" uid="uid://c60p71ipbiuek" path="res://Tilemap/tileset_x3.tres" id="20_jwy78"]
[ext_resource type="Script" path="res://Game/Scripts/PlatformCamera.gd" id="20_ljdcj"]
[ext_resource type="TileSet" uid="uid://qh1pssldqv7m" path="res://Tilemap/tileset_0.tres" id="21_dm01q"]
[ext_resource type="Script" path="res://Tilemap.gd" id="22_gv5jk"]
[ext_resource type="Script" path="res://Game/PlayerX3.gd" id="26_rwbyh"]

[sub_resource type="LabelSettings" id="LabelSettings_hqr5r"]
font_color = Color(0.466181, 0.466181, 0.466181, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2hwq"]
size = Vector2(60, 60)

[node name="World" type="Node2D"]

[node name="SPRITES" type="Node2D" parent="."]
position = Vector2(480, 200)

[node name="background" type="AnimatedSprite2D" parent="SPRITES"]
sprite_frames = ExtResource("13_qljbc")
animation = &"idle"
centered = false
script = ExtResource("6_fu8am")
sprite_name = "background"

[node name="Player" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(32, 72)
sprite_frames = ExtResource("5_1gvc2")
animation = &"move"
script = ExtResource("6_fu8am")
sprite_name = "player"

[node name="Coin" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(72, 144)
sprite_frames = ExtResource("7_jijk1")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "coin"

[node name="Enemy" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(176, 120)
sprite_frames = ExtResource("8_1uygw")
animation = &"move"
script = ExtResource("6_fu8am")
sprite_name = "enemy"

[node name="Danger" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(216, 128)
sprite_frames = ExtResource("9_ej2pt")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "danger"

[node name="platform_static" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(72, 96)
sprite_frames = ExtResource("10_s4gdo")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "platform_static"

[node name="platform_move" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(256, 32)
sprite_frames = ExtResource("11_mj3n5")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "platform_move"

[node name="flag" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(304, 120)
sprite_frames = ExtResource("12_663yc")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "flag"

[node name="background_parallax" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(488, 88)
sprite_frames = ExtResource("14_sas53")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "background_parallax"

[node name="decoration_small" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(16, 144)
sprite_frames = ExtResource("15_5elp5")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "decoration_small"

[node name="decortaion_mid" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(96, 136)
sprite_frames = ExtResource("16_5voug")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "decoration_mid"

[node name="decoration_big" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(264, 112)
sprite_frames = ExtResource("17_yx0yb")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "decoration_big"

[node name="ui_live" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(24, 16)
sprite_frames = ExtResource("18_542jj")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "ui_live"

[node name="ui_coin" type="AnimatedSprite2D" parent="SPRITES"]
position = Vector2(48, 16)
sprite_frames = ExtResource("19_gv5uv")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "ui_coin"

[node name="Player" parent="." instance=ExtResource("3_jxqyn")]
position = Vector2(632, 288)

[node name="Coin2" parent="." instance=ExtResource("4_1ushc")]
position = Vector2(712, 264)

[node name="Coin3" parent="." instance=ExtResource("4_1ushc")]
position = Vector2(736, 264)

[node name="Coin" parent="." instance=ExtResource("4_1ushc")]

[node name="Coin4" parent="." instance=ExtResource("4_1ushc")]
position = Vector2(760, 264)

[node name="Tilemap" type="TileMap" parent="."]
tile_set = ExtResource("21_dm01q")
format = 2
layer_0/tile_data = PackedInt32Array(524299, 3, 1, 524300, 65539, 1, 524301, 65539, 1, 524302, 65539, 1, 524303, 65539, 1, 458768, 3, 1, 524304, 262147, 2, 458769, 65539, 1, 458770, 65539, 1, 458771, 65539, 1, 589835, 3, 2, 655371, 3, 2, 720907, 3, 2, 589836, 65539, 2, 589837, 65539, 2, 589838, 65539, 2, 589839, 65539, 2, 589840, 65539, 2, 655376, 65539, 2, 720911, 65539, 2, 720910, 65539, 2, 655374, 65539, 2, 655373, 65539, 2, 655372, 65539, 2, 720908, 65539, 2, 720909, 65539, 2, 655375, 65539, 2, 524305, 65539, 2, -65533, 65539, 2, 3, 65539, 2, 65539, 65539, 2, 131075, 65539, 2, 196611, 65539, 2, 262147, 65539, 2, 327683, 65539, 2, 393219, 65539, 2, 458755, 65539, 2, 524291, 65539, 2, 589827, 65539, 2, 655363, 65539, 2, 720899, 65539, 2, 786435, 65539, 2, 786436, 65539, 2, 786437, 65539, 2, 786438, 65539, 2, 786439, 65539, 2, 786440, 65539, 2, 786441, 65539, 2, 786442, 65539, 2, 589834, 65539, 2, 655370, 65539, 2, 720906, 65539, 2, 589833, 65539, 2, 655369, 65539, 2, 720905, 65539, 2, 655368, 65539, 2, 720904, 65539, 2, 720903, 65539, 2, 1441819, 131072, 1, 1507355, 131072, 1, 1572891, 131072, 1, 1441820, 0, 1, 1507356, 0, 1, 1572892, 0, 1, 1441821, 65536, 1, 1507357, 65536, 1, 1572893, 65536, 1, 1441823, 0, 1, 1507359, 0, 1, 1572895, 0, 1, 1441824, 65536, 1, 1507360, 65536, 1, 1572896, 65536, 1, 1441825, 131072, 1, 1507361, 131072, 1, 1572897, 131072, 1, 1376291, 0, 1, 1376292, 65536, 1, 1376293, 0, 1, 1376294, 65536, 1, 1376295, 0, 1, 1376296, 65536, 1, 1376297, 131072, 1, 1376298, 65536, 1, 1376299, 131072, 1, 1376300, 65536, 1, 1376301, 131072, 1, 1441827, 0, 1, 1507363, 0, 1, 1572899, 3, 2, 1310747, 131072, 1, 1245211, 0, 1, 1245212, 65536, 1, 1245213, 131072, 1, 1179677, 131072, 1, 1179676, 65536, 1, 1179675, 0, 1, 1114139, 131072, 1, 1048603, 131072, 1, 983067, 131072, 1, 917531, 131072, 1, 917548, 0, 1, 983085, 0, 1, 917549, 65536, 1, 852013, 65536, 1, 852012, 0, 1, 786477, 0, 1, 1048621, 0, 1, 1114157, 0, 1, 1441828, 65536, 1, 1441829, 131072, 1, 1441830, 0, 1, 1441831, 65536, 1, 1441832, 131072, 1, 1441833, 0, 1, 1441834, 65536, 1, 1441835, 0, 1, 1441836, 65536, 1, 1441837, 131072, 1, 1507364, 65536, 1, 1507365, 131072, 1, 1507366, 0, 1, 1507367, 65536, 1, 1507368, 131072, 1, 1507369, 0, 1, 1507370, 65536, 1, 1507371, 0, 1, 1507372, 65536, 1, 1507373, 131072, 1, 1703962, 65536, 1, 1703963, 131072, 1, 1703964, 0, 1, 1703965, 65536, 1, 1703966, 131072, 1, 1703967, 0, 1, 1703968, 65536, 1, 1703969, 131072, 1, 1703970, 0, 1, 1703971, 65536, 1, 1703972, 131072, 1, 1703973, 0, 1, 1703974, 65536, 1, 1703975, 131072, 1, 1703976, 0, 1, 1703977, 65536, 1, 1703978, 131072, 1, 1703979, 0, 1, 1703980, 65536, 1, 1703981, 131072, 1, 1703982, 65539, 2, 1703983, 65539, 2, 1441822, 131072, 1, 1507358, 131072, 1, 1507353, 0, 1, 1507354, 65536, 1, 1572889, 0, 1, 1572890, 65536, 1, 1441817, 0, 1, 1441818, 65536, 1, 1572894, 131072, 1, 917529, 0, 1, 917530, 65536, 1, 983065, 0, 1, 983066, 65536, 1, 1048601, 0, 1, 1048602, 65536, 1, 1114137, 0, 1, 1114138, 65536, 1, 1310745, 0, 1, 1310746, 65536, 1, 786478, 65536, 1, 786479, 131072, 1, 852014, 131072, 1, 852015, 131072, 1, 917550, 131072, 1, 917551, 131072, 1, 983086, 65536, 1, 983087, 131072, 1, 1048622, 65536, 1, 1048623, 131072, 1, 1114158, 65536, 1, 1114159, 131072, 1, 1703961, 0, 1)
script = ExtResource("22_gv5jk")

[node name="background2" type="AnimatedSprite2D" parent="."]
position = Vector2(840, 384)
scale = Vector2(3, 3)
sprite_frames = ExtResource("13_qljbc")
animation = &"idle"
centered = false
script = ExtResource("6_fu8am")
sprite_name = "background"

[node name="Tilemap2" type="TileMap" parent="."]
position = Vector2(840, 384)
tile_set = ExtResource("20_jwy78")
format = 2
layer_0/tile_data = PackedInt32Array(1441819, 3, 1, 1507355, 3, 2, 1572891, 3, 3, 1441820, 65539, 1, 1507356, 65539, 2, 1572892, 65539, 3, 1441821, 131075, 1, 1507357, 131075, 2, 1572893, 131075, 3, 1441823, 3, 1, 1507359, 3, 2, 1572895, 3, 3, 1441824, 65539, 1, 1507360, 65539, 2, 1572896, 65539, 3, 1441825, 131075, 1, 1507361, 131075, 2, 1572897, 131075, 3, 1376291, 3, 1, 1376292, 65539, 1, 1376293, 65539, 1, 1376294, 65539, 1, 1376295, 65539, 1, 1376296, 65539, 1, 1376297, 65539, 1, 1376298, 65539, 1, 1376299, 65539, 1, 1376300, 65539, 1, 1376301, 65539, 1, 1441827, 3, 2, 1507363, 3, 2, 1572899, 3, 2, 1310747, 131075, 3, 1245211, 196611, 1, 1245212, 65539, 3, 1245213, 131075, 3, 917548, 3, 3, 983085, 3, 2, 917549, 262147, 1, 852013, 262147, 2, 852012, 3, 1, 786477, 3, 2, 1048621, 3, 2, 1114157, 3, 3, 1441828, 65539, 2, 1441829, 65539, 2, 1441830, 65539, 2, 1441831, 65539, 2, 1441832, 65539, 2, 1441833, 65539, 2, 1441834, 65539, 2, 1441835, 65539, 2, 1441836, 65539, 2, 1441837, 65539, 2, 1507364, 65539, 2, 1507365, 65539, 2, 1507366, 65539, 2, 1507367, 65539, 2, 1507368, 65539, 2, 1507369, 65539, 2, 1507370, 65539, 2, 1507371, 65539, 2, 1507372, 65539, 2, 1507373, 65539, 2, 1703962, 65539, 2, 1703963, 65539, 2, 1703964, 65539, 2, 1703965, 65539, 2, 1703966, 65539, 2, 1703967, 65539, 2, 1703968, 65539, 2, 1703969, 65539, 2, 1703970, 65539, 2, 1703971, 65539, 2, 1703972, 65539, 2, 1703973, 65539, 2, 1703974, 65539, 2, 1703975, 65539, 2, 1703976, 65539, 2, 1703977, 65539, 2, 1703978, 65539, 2, 1703979, 65539, 2, 1703980, 65539, 2, 1703981, 65539, 2, 1703982, 65539, 2, 1703983, 65539, 2, 262142, 65536, 1, 262143, 65536, 1, 196608, 65536, 1, 196609, 65536, 1, 196610, 65536, 1, 196611, 65536, 1, 196612, 65536, 1, 4, 0, 2, 65540, 0, 2, 131076, 0, 2)
script = ExtResource("22_gv5jk")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(912, 480)
limit_smoothed = true
script = ExtResource("20_ljdcj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_d2ujk")

[node name="DevMenu" type="Control" parent="CanvasLayer/Interface"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
theme = ExtResource("2_d2ujk")
script = ExtResource("1_n8tci")

[node name="DirScaner" type="Node" parent="CanvasLayer/Interface/DevMenu"]
script = ExtResource("2_fl45q")

[node name="DevTool" type="Button" parent="CanvasLayer/Interface/DevMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 24.0
theme = ExtResource("2_d2ujk")
shortcut = ExtResource("4_3sunq")
text = "DevTool"

[node name="DevToolPanel" type="Panel" parent="CanvasLayer/Interface/DevMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 408.0
offset_bottom = 88.0
theme = ExtResource("2_d2ujk")

[node name="DevToolClose" type="Button" parent="CanvasLayer/Interface/DevMenu/DevToolPanel"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 16.0
theme = ExtResource("2_d2ujk")
shortcut = ExtResource("4_3sunq")
text = "X"

[node name="AssetPackCon" type="HBoxContainer" parent="CanvasLayer/Interface/DevMenu/DevToolPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 392.0
offset_bottom = 44.0
theme = ExtResource("2_d2ujk")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/AssetPackCon"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_d2ujk")
text = "Asset Pack:"

[node name="AssetPackSelector" type="OptionButton" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/AssetPackCon"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_d2ujk")

[node name="EditAssetPack" type="Button" parent="CanvasLayer/Interface/DevMenu/DevToolPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 120.0
offset_bottom = 72.0
theme = ExtResource("2_d2ujk")
text = "Edit"

[node name="AddNewAssetPack" type="Button" parent="CanvasLayer/Interface/DevMenu/DevToolPanel"]
layout_mode = 0
offset_left = 184.0
offset_top = 56.0
offset_right = 296.0
offset_bottom = 72.0
theme = ExtResource("2_d2ujk")
text = "Add New"

[node name="SettingsPanel" type="Panel" parent="CanvasLayer/Interface/DevMenu/DevToolPanel"]
layout_mode = 0
offset_top = 88.0
offset_right = 400.0
offset_bottom = 504.0
theme = ExtResource("2_d2ujk")
script = ExtResource("20_bkcxn")

[node name="AssetName" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 496.0
offset_bottom = 24.0
theme = ExtResource("2_d2ujk")
text = "Asset name--------"
label_settings = SubResource("LabelSettings_hqr5r")
vertical_alignment = 1

[node name="Main" type="Panel" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 80.0
offset_right = 392.0
offset_bottom = 168.0
theme = ExtResource("2_d2ujk")

[node name="PixelArt" type="CheckBox" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 32.0
theme = ExtResource("2_d2ujk")
text = "Pixel Art"

[node name="UILives" type="HBoxContainer" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 241.0
offset_bottom = 52.0

[node name="Label" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main/UILives"]
layout_mode = 2
text = "UI Lives Display"

[node name="Selector" type="OptionButton" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main/UILives"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_d2ujk")
item_count = 2
selected = 0
popup/item_0/text = "NUMBERS"
popup/item_0/id = 0
popup/item_1/text = "COUNT"
popup/item_1/id = 1

[node name="DefaultFPS" type="HBoxContainer" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main"]
layout_mode = 2
offset_left = 248.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 32.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="Label2" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main/DefaultFPS"]
layout_mode = 2
theme = ExtResource("2_d2ujk")
text = "Default
FPS"
vertical_alignment = 1

[node name="FPSSpin" type="SpinBox" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main/DefaultFPS"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_d2ujk")
value = 5.0
allow_greater = true
alignment = 1

[node name="UICoins" type="HBoxContainer" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main"]
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 241.0
offset_bottom = 76.0

[node name="Label" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main/UICoins"]
layout_mode = 2
text = "UI Coins Display"

[node name="Selector" type="OptionButton" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Main/UICoins"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_d2ujk")
item_count = 2
selected = 0
popup/item_0/text = "NUMBERS"
popup/item_0/id = 0
popup/item_1/text = "COUNT"
popup/item_1/id = 1

[node name="Grid" type="GridContainer" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel"]
layout_mode = 2
offset_left = 8.0
offset_top = 32.0
offset_right = 392.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_d2ujk")
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Grid"]
layout_mode = 2
theme = ExtResource("2_d2ujk")
text = "Asset Pack Name"

[node name="AssetpackNameEdit" type="LineEdit" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_d2ujk")
placeholder_text = "Name"

[node name="Label2" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_d2ujk")
text = "Author"

[node name="NicknameEdit" type="LineEdit" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Grid"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_d2ujk")
placeholder_text = "Your nickname"

[node name="Sprites" type="VBoxContainer" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 176.0
offset_right = 184.0
offset_bottom = 392.0
theme = ExtResource("2_d2ujk")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Sprites"]
layout_mode = 2
theme = ExtResource("2_d2ujk")
text = "Sprites:"
vertical_alignment = 1

[node name="SpritesList" type="ItemList" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Sprites"]
layout_mode = 2
size_flags_vertical = 3
item_count = 3
item_0/text = "1"
item_1/text = "2"
item_2/text = "3"

[node name="Anims" type="VBoxContainer" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel"]
layout_mode = 0
offset_left = 192.0
offset_top = 176.0
offset_right = 392.0
offset_bottom = 288.0
theme = ExtResource("2_d2ujk")
metadata/_edit_group_ = true

[node name="Label2" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Anims"]
layout_mode = 2
theme = ExtResource("2_d2ujk")
text = "Animations"
vertical_alignment = 1

[node name="AnimationsList" type="ItemList" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Anims"]
layout_mode = 2
size_flags_vertical = 3

[node name="AnimData" type="Panel" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel"]
layout_mode = 0
offset_left = 192.0
offset_top = 296.0
offset_right = 392.0
offset_bottom = 392.0
theme = ExtResource("2_d2ujk")

[node name="FPS" type="HBoxContainer" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/AnimData"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 24.0
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="Label2" type="Label" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/AnimData/FPS"]
layout_mode = 2
theme = ExtResource("2_d2ujk")
text = "FPS"
vertical_alignment = 1

[node name="FPSSpin" type="SpinBox" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/AnimData/FPS"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_d2ujk")
value = 5.0
allow_greater = true
alignment = 1

[node name="Delete" type="Button" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/AnimData"]
layout_mode = 0
offset_left = 8.0
offset_top = 32.0
offset_right = 184.0
offset_bottom = 48.0
disabled = true
text = "Delete data"

[node name="Save" type="Button" parent="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_d2ujk")
text = "Save"

[node name="NewAssetPackPanel" type="Panel" parent="CanvasLayer/Interface"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 280.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_d2ujk")
metadata/_edit_group_ = true

[node name="Margin" type="MarginContainer" parent="CanvasLayer/Interface/NewAssetPackPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_d2ujk")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PopupPanel" type="PopupPanel" parent="CanvasLayer/Interface"]
initial_position = 3
size = Vector2i(325, 100)
current_screen = 0

[node name="HUD" type="Control" parent="CanvasLayer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="UILivesText" type="Control" parent="CanvasLayer/Interface/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -52.0
offset_right = 80.0
offset_bottom = -20.0
grow_vertical = 0

[node name="ui_live2" type="AnimatedSprite2D" parent="CanvasLayer/Interface/HUD/UILivesText"]
position = Vector2(16, 16)
sprite_frames = ExtResource("18_542jj")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "ui_live"

[node name="Label" type="Label" parent="CanvasLayer/Interface/HUD/UILivesText"]
layout_mode = 2
offset_left = 32.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 24.0
theme = ExtResource("2_d2ujk")
text = "x 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UICoins" type="Control" parent="CanvasLayer/Interface/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -76.0
offset_right = 80.0
offset_bottom = -44.0
grow_vertical = 0

[node name="ui_coin2" type="AnimatedSprite2D" parent="CanvasLayer/Interface/HUD/UICoins"]
position = Vector2(16, 16)
sprite_frames = ExtResource("19_gv5uv")
animation = &"idle"
script = ExtResource("6_fu8am")
sprite_name = "ui_coin"

[node name="Label" type="Label" parent="CanvasLayer/Interface/HUD/UICoins"]
layout_mode = 2
offset_left = 32.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 24.0
theme = ExtResource("2_d2ujk")
text = "x 999"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" parent="." instance=ExtResource("3_jxqyn")]
position = Vector2(988, 304)
script = ExtResource("26_rwbyh")
snapping_pixels = 3
snapping = true

[node name="Collision" parent="Player2" index="1"]
shape = SubResource("RectangleShape2D_p2hwq")

[connection signal="pressed" from="CanvasLayer/Interface/DevMenu/DevTool" to="CanvasLayer/Interface/DevMenu" method="_on_dev_tool_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/DevMenu/DevToolPanel/DevToolClose" to="CanvasLayer/Interface/DevMenu" method="_on_dev_tool_close_pressed"]
[connection signal="item_selected" from="CanvasLayer/Interface/DevMenu/DevToolPanel/AssetPackCon/AssetPackSelector" to="CanvasLayer/Interface/DevMenu" method="_on_asset_pack_selector_item_selected"]
[connection signal="pressed" from="CanvasLayer/Interface/DevMenu/DevToolPanel/EditAssetPack" to="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel" method="_on_edit_asset_pack_pressed"]
[connection signal="item_selected" from="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Sprites/SpritesList" to="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel" method="_on_sprites_lits_item_selected"]
[connection signal="item_selected" from="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Anims/AnimationsList" to="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel" method="_on_animations_list_item_selected"]
[connection signal="value_changed" from="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/AnimData/FPS/FPSSpin" to="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel" method="_on_fps_spin_value_changed"]
[connection signal="pressed" from="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel/Save" to="CanvasLayer/Interface/DevMenu/DevToolPanel/SettingsPanel" method="_on_save_pressed"]

[editable path="Player2"]
